# Mcp-todo

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_ai_integration.py
ai/: __init__.py  agent.py  groq_client.py  parsers.py
database/: __init__.py  supabase_client.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: CalendarView.jsx  MiniCalendar.jsx  Sidebar.jsx  StickyBoard.jsx
frontend/src/components/ui/: button.jsx
frontend/src/contexts/: TasksContext.jsx
frontend/src/lib/: utils.js
src/api/: main.py
src/mcp_server/: __init__.py  server.py
src/mcp_server/models/: __init__.py  task.py
src/mcp_server/tools/: __init__.py  crud.py  smart.py
tests/: test_crud_tools.py  test_smart_tools.py
